--- a/public/studylab/css/style.css
+++ b/public/studylab/css/style.css
@@ -8587,7 +8587,7 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  height: 100%;
+  height: 150%;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
@@ -8708,7 +8708,8 @@ h1, h2, h3, h4, h5,
   -moz-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
   box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
   z-index: 0;
-  margin-top: -550px; }
+  margin-top: -600px;
+  margin-left:-600px}
   @media (max-width: 767.98px) {
     .login-wrap {
       margin-top: 3em; } }
@@ -8871,7 +8872,8 @@ h1, h2, h3, h4, h5,
   background: #fff;
   -webkit-box-shadow: 0px 10px 23px -8px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 10px 23px -8px rgba(0, 0, 0, 0.11);
-  box-shadow: 0px 10px 23px -8px rgba(0, 0, 0, 0.11); }
+  box-shadow: 0px 10px 23px -8px rgba(0, 0, 0, 0.11);}
+
   .project-wrap .img {
     display: block;
     width: 100%;
