--- a/public/studylab/css/style.css
+++ b/public/studylab/css/style.css
@@ -8587,7 +8587,7 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  height: 150%;
+  height: 30%;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
@@ -8610,7 +8610,7 @@ h1, h2, h3, h4, h5,
     background: linear-gradient(45deg, rgba(32, 124, 229, 0) 0%, rgba(146, 95, 206, 0) 55%, #f048bb 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207ce5', endColorstr='#f048bb', GradientType=1 ); }
   .hero-wrap.hero-wrap-2 {
-    height: 600px;
+    height: 200px;
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
@@ -8629,7 +8629,7 @@ h1, h2, h3, h4, h5,
       background: linear-gradient(135deg, #ce4be8 0%, #207ce5 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ce4be8', endColorstr='#207ce5', GradientType=1 ); }
     .hero-wrap.hero-wrap-2 .slider-text {
-      height: 600px; }
+      height: auto; }
 
 .slider-text {
   position: relative; }
