--- a/public/studylab/css/style.css
+++ b/public/studylab/css/style.css
@@ -8585,6 +8585,22 @@ h1, h2, h3, h4, h5,
   background: linear-gradient(135deg, #ce4be8 0%, #207ce5 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ce4be8', endColorstr='#207ce5', GradientType=1 ); }
 
+  .page-header {
+    width: 100%;
+    padding: p5x 0;
+    background: #f0f4ff;     /* light grey background */
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+    margin-top :70px;
+}
+
+.page-header h1 {
+    margin: 0;
+    font-size: 28px;         /* not too big */
+    font-weight: 600;
+    color: #333;
+}
+
 .hero-wrap {
   width: 100%;
   height: 30%;
@@ -8640,7 +8656,7 @@ h1, h2, h3, h4, h5,
     text-transform: uppercase; }
   .slider-text h1 {
     font-size: 50px;
-    color: #fff;
+    color: #2C3E8C;
     line-height: 1.2;
     font-weight: 700; }
     @media (max-width: 991.98px) {
